--- a/src/components/ui/Pagination.astro
+++ b/src/components/ui/Pagination.astro
@@ -94,18 +94,18 @@ const { first, prev, next, last, current, length, size, total } = Astro.props
 		@apply flex w-full flex-col items-center gap-2 md:flex-row;
 	}
 	.pagination__helper-text {
-		@apply m-0 w-full flex-1 p-0 text-center text-sm font-medium text-neutral-300 md:text-left;
+		@apply m-0 w-full flex-1 p-0 text-center text-sm font-medium text-neutral-400 md:text-left dark:text-neutral-300;
 	}
 	.pagination__list {
-		@apply flex list-none items-center justify-center text-sm text-neutral-50 md:gap-1;
+		@apply flex list-none items-center justify-center text-sm text-neutral-600 md:gap-1 dark:text-neutral-50;
 	}
 	.pagination__nav-arrows {
-		@apply inline-flex h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-50 transition duration-300 hover:bg-primary-400/15 hover:stroke-primary-500 hover:text-primary-600 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none;
+		@apply inline-flex h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-600 transition duration-300 hover:bg-primary-400/15 hover:stroke-primary-500 hover:text-primary-600 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none dark:text-neutral-50 dark:hover:bg-secondary-400/15 dark:hover:stroke-secondary-500 dark:hover:text-secondary-600 dark:focus:bg-secondary-50 dark:focus:stroke-secondary-600 dark:focus:text-secondary-600;
 	}
 	.pagination__item-link {
-		@apply hidden h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-50 transition duration-300 hover:bg-primary-400/15 hover:stroke-primary-500 hover:text-primary-600 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none md:inline-flex;
+		@apply hidden h-10 items-center justify-center gap-4 stroke-neutral-700 px-4 text-sm font-medium text-neutral-600 transition duration-300 hover:bg-primary-400/15 hover:stroke-primary-500 hover:text-primary-600 focus:bg-primary-50 focus:stroke-primary-600 focus:text-primary-600 focus-visible:outline-none md:inline-flex dark:text-neutral-50 dark:hover:bg-secondary-400/15 dark:hover:stroke-secondary-500 dark:hover:text-secondary-600 dark:focus:bg-secondary-50 dark:focus:stroke-secondary-600 dark:focus:text-secondary-600;
 	}
 	.pagination__item-link--active {
-		@apply border-b border-primary-600 text-purple-500 hover:border-primary-700 hover:stroke-primary-500 hover:text-primary-600 focus:border-primary-800 focus:text-primary-700;
+		@apply border-b border-primary-500 text-primary-500 hover:border-primary-700 hover:stroke-primary-500 hover:text-primary-600 focus:border-primary-800 focus:text-primary-700 dark:border-secondary-500 dark:text-secondary-500 dark:hover:border-secondary-700 dark:hover:stroke-secondary-500 dark:hover:text-secondary-600 dark:focus:border-secondary-800 dark:focus:text-secondary-700;
 	}
 </style>
