--- a/src/components/ui/cards/partials/Card.astro
+++ b/src/components/ui/cards/partials/Card.astro
@@ -27,6 +27,6 @@ const { link, classes } = Astro.props
 }
 <style>
 	.card {
-		@apply flex flex-col overflow-hidden border border-neutral-800 bg-neutral-900 text-neutral-500 shadow-lg shadow-neutral-950/50;
+		@apply flex flex-col overflow-hidden;
 	}
 </style>
