--- a/src/layouts/CaseStudyLayout.astro
+++ b/src/layouts/CaseStudyLayout.astro
@@ -54,7 +54,7 @@ console.log(frontmatter.id)
 					alt={frontmatter.title}
 					width={1460}
 					height={700}
-					class="w-full border border-neutral-500"
+					class="w-full border border-neutral-50 dark:border-neutral-500"
 				/>
 			</Col>
 		</Row>
@@ -88,7 +88,7 @@ console.log(frontmatter.id)
 								alt={frontmatter.title}
 								width={600}
 								height={400}
-								class="w-full border border-neutral-500"
+								class="w-full border border-neutral-50 dark:border-neutral-500"
 							/>
 						</Col>
 					))}
