--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,12 +4,32 @@ html {
 }
 body {
 	--gradient-stop: 15%;
-	@apply font-sans text-neutral-400 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto;
+	@apply font-sans text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:text-neutral-400;
 	background:
 		radial-gradient(
+			circle at 90% 0%,
+			theme('colors.primary.50' / 1) 0%,
+			theme('colors.white' / 0) var(--gradient-stop)
+		),
+		radial-gradient(
 			circle at 50% 100%,
-			theme('colors.primary.950') 0%,
-			theme('colors.neutral.950') var(--gradient-stop)
+			theme('colors.primary.50' / 1) 0%,
+			theme('colors.white' / 0) var(--gradient-stop)
+		),
+		theme('colors.white');
+}
+
+body:where(.dark, .dark *) {
+	background:
+		radial-gradient(
+			circle at 90% 0%,
+			theme('colors.secondary.950' / 1) 0%,
+			theme('colors.neutral.950' / 0) var(--gradient-stop)
+		),
+		radial-gradient(
+			circle at 50% 100%,
+			theme('colors.secondary.950' / 1) 0%,
+			theme('colors.neutral.950' / 0) var(--gradient-stop)
 		),
 		theme('colors.neutral.950');
 }
@@ -24,7 +44,7 @@ h3,
 h4,
 h5,
 h6 {
-	@apply font-headings text-neutral-50 last:mb-0 [&>strong]:text-primary-500;
+	@apply font-headings text-neutral-900 last:mb-0 dark:text-neutral-50 [&>strong]:text-primary-500;
 }
 h1 strong,
 h2 strong,
@@ -70,17 +90,17 @@ h6 {
 	@apply text-base lg:text-lg;
 }
 main a {
-	@apply text-primary-500 hover:text-primary-600;
+	@apply text-primary-500 hover:text-primary-600 dark:text-secondary-500 dark:hover:text-secondary-600;
 }
 .highlight {
-	@apply text-primary-500;
+	@apply text-primary-500 dark:text-secondary-500;
 }
 .small {
 	@apply text-sm font-normal text-neutral-500;
 }
 /* Global basic styling */
 .basic-text {
-	@apply [&_blockquote]:relative [&_blockquote]:mb-6 [&_blockquote]:rounded [&_blockquote]:border [&_blockquote]:border-neutral-600 [&_blockquote]:bg-neutral-700 [&_blockquote]:p-6 [&_blockquote]:text-lg [&_blockquote]:leading-relaxed [&_blockquote]:text-neutral-50 [&_blockquote]:before:absolute [&_blockquote]:before:left-0 [&_blockquote]:before:top-0 [&_blockquote]:before:z-[0] [&_blockquote]:before:block [&_blockquote]:before:text-9xl [&_blockquote]:before:italic [&_blockquote]:before:text-neutral-600 [&_blockquote]:before:opacity-50 [&_blockquote]:before:content-['"'] lg:[&_blockquote]:-mx-12 [&_blockquote_p]:relative [&_blockquote_p]:z-[1] [&_blockquote_p]:px-6 [&_h1:not(:first-child)]:mt-24 [&_h2:not(:first-child)]:mt-24 [&_h3:not(:first-child)]:mt-24 [&_h4:not(:first-child)]:mt-12 [&_img]:rounded [&_img]:border [&_img]:border-neutral-600 [&_li]:mb-2 [&_li]:ml-4 [&_li]:list-disc [&_li]:marker:text-white lg:[&_p:has(img)]:-mx-12 [&_pre]:mb-6 [&_pre]:rounded [&_pre]:border [&_pre]:!border-neutral-800 [&_pre]:!bg-neutral-900 [&_pre]:p-6 [&_pre]:text-base [&_pre]:outline-none lg:[&_pre]:-mx-12;
+	@apply [&_blockquote]:relative [&_blockquote]:mb-6 [&_blockquote]:rounded [&_blockquote]:border [&_blockquote]:border-neutral-600 [&_blockquote]:bg-neutral-700 [&_blockquote]:p-6 [&_blockquote]:text-lg [&_blockquote]:leading-relaxed [&_blockquote]:text-neutral-50 [&_blockquote]:before:absolute [&_blockquote]:before:left-0 [&_blockquote]:before:top-0 [&_blockquote]:before:z-[0] [&_blockquote]:before:block [&_blockquote]:before:text-9xl [&_blockquote]:before:italic [&_blockquote]:before:text-neutral-600 [&_blockquote]:before:opacity-50 [&_blockquote]:before:content-['"'] lg:[&_blockquote]:-mx-12 [&_blockquote_p]:relative [&_blockquote_p]:z-[1] [&_blockquote_p]:px-6 [&_h1:not(:first-child)]:mt-24 [&_h2:not(:first-child)]:mt-24 [&_h3:not(:first-child)]:mt-24 [&_h4:not(:first-child)]:mt-12 [&_img]:rounded [&_img]:border [&_img]:border-neutral-600 [&_li]:mb-2 [&_li]:ml-4 [&_li]:list-disc [&_li]:marker:text-neutral-900 dark:[&_li]:marker:text-white lg:[&_p:has(img)]:-mx-12 [&_pre]:mb-6 [&_pre]:rounded [&_pre]:border [&_pre]:!border-neutral-800 [&_pre]:!bg-neutral-900 [&_pre]:p-6 [&_pre]:text-base [&_pre]:outline-none lg:[&_pre]:-mx-12;
 }
 .basic-text--lg {
 	@apply text-lg leading-relaxed [&_blockquote]:text-xl [&_blockquote]:leading-loose;
