--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -685,13 +685,13 @@ button.swiper-pagination-bullet {
 /* Theme */
 .swiper-button-prev,
 .swiper-button-next {
-	@apply flex !size-14 rounded-full bg-neutral-900/10 backdrop-blur-sm [&:after]:!text-2xl [&:after]:text-white;
+	@apply flex !size-14 rounded-full bg-neutral-900/10 backdrop-blur-sm [&:after]:!text-2xl [&:after]:text-neutral-900 dark:[&:after]:text-white;
 }
 .swiper-cube-shadow {
 	@apply !opacity-20;
 }
 .swiper-pagination-bullet {
-	@apply !mx-3 !size-3 !bg-primary-50 !opacity-100 [&.swiper-pagination-bullet-active]:!bg-primary-500;
+	@apply !mx-3 !size-3 !bg-primary-50 !opacity-100 dark:!bg-secondary-50 [&.swiper-pagination-bullet-active]:!bg-primary-500 dark:[&.swiper-pagination-bullet-active]:!bg-secondary-500;
 }
 
 /* Custom Pagination */
@@ -700,9 +700,9 @@ button.swiper-pagination-bullet {
 }
 
 .custom-pagination-bullet.swiper-pagination-bullet-active {
-	@apply !w-12 text-primary-500 opacity-100 transition-colors duration-300;
+	@apply !w-12 text-primary-500 opacity-100 transition-colors duration-300 dark:text-secondary-500;
 }
 
 .custom-pagination-bullet.swiper-pagination-bullet-active::after {
-	@apply animate-growLine absolute left-4 top-[60%] mx-2 inline-block h-px w-8 origin-left translate-y-1/2 bg-primary-500 content-[''] last:hidden;
+	@apply absolute left-4 top-[60%] mx-2 inline-block h-px w-8 origin-left translate-y-1/2 animate-growLine bg-primary-500 content-[''] last:hidden dark:bg-secondary-500;
 }
