--- a/src/components/ui/Section.astro
+++ b/src/components/ui/Section.astro
@@ -43,7 +43,7 @@ const { id, fullWidth, stickyCol = false, padding = 'both', vAlign, classes } = 
 
 <style>
 	.section {
-		@apply relative text-neutral-400 [&.section--sticky-col_.container]:h-full [&:not(.section--sticky-col)]:overflow-hidden;
+		@apply relative text-neutral-600 dark:text-neutral-400 [&.section--sticky-col_.container]:h-full [&:not(.section--sticky-col)]:overflow-hidden;
 	}
 	.section--padded {
 		@apply py-12 lg:py-24;
