--- a/src/components/ui/cards/CaseStudyCard.astro
+++ b/src/components/ui/cards/CaseStudyCard.astro
@@ -61,7 +61,7 @@ const formatRoleName = (role: string): string => {
 			</div>
 		)
 	}
-	<CardBody classes="!px-0 !pb-4 text-neutral-400 text-base">
+	<CardBody classes="!px-0 !pb-4 text-neutral-600 dark:text-neutral-400 text-base">
 		<h3 class="caseStudy-title">
 			<a href={link}>{title}</a>
 		</h3>
@@ -82,9 +82,9 @@ const formatRoleName = (role: string): string => {
 
 <style>
 	.caseStudy-title {
-		@apply mb-4 text-lg text-white transition-colors duration-300 hover:text-primary-500 [&_a]:text-inherit;
+		@apply mb-4 text-lg text-neutral-900 transition-colors duration-300 hover:text-primary-500 dark:text-white dark:hover:text-secondary-500 [&_a]:text-inherit;
 	}
 	.caseStudy-roles {
-		@apply flex gap-2 text-sm italic text-neutral-600;
+		@apply flex gap-2 text-sm italic text-neutral-400 dark:text-neutral-600;
 	}
 </style>
