--- a/src/components/blocks/hero/HomeCTA.astro
+++ b/src/components/blocks/hero/HomeCTA.astro
@@ -10,10 +10,6 @@ import Row from '../../ui/Row.astro'
 import Col from '../../ui/Col.astro'
 // - UI
 import { Image } from 'astro:assets'
-
-// Content
-// - Hero Image
-import heroImage from '../../../assets/hero-image.png'
 ---
 
 <Section id="intro" classes="!overflow-visible !pt-[240px]">
@@ -21,9 +17,12 @@ import heroImage from '../../../assets/hero-image.png'
 		<Col span="2" />
 		<Col span="10">
 			<Image
-				src={heroImage}
+				src="/hero/hero-image-primary.jpg"
 				alt="Milo Astro Theme"
+				width={500}
+				height={500}
 				class="absolute -left-40 -top-40 md:-left-60 md:-top-48"
+				id="theme-image"
 				format="webp"
 			/>
 			<div class="relative z-10 text-left">
@@ -33,14 +32,14 @@ import heroImage from '../../../assets/hero-image.png'
 					I’m Milo <br /> I build <br /> for the web.
 				</h1>
 
-				<p
-					class="flex flex-row flex-wrap gap-6 font-headings text-neutral-300 lg:flex-nowrap [&_a]:text-neutral-300 [&_a]:transition-colors [&_a]:duration-300"
+				<div
+					class="flex flex-row flex-wrap gap-6 font-headings text-neutral-600 lg:flex-nowrap dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
 				>
 					<a href="mailto:milo@studio.com">milo@studio.com</a>
 					<a href="tel:+13235550198">+1 (323) 555-0198</a>
 					<span>Remote Friendly</span>
 					<a href="#">@milo.design</a>
-				</p>
+				</div>
 			</div>
 		</Col>
 	</Row>
