Added new fonts

--- a/src/components/ui/Testimonial.astro
+++ b/src/components/ui/Testimonial.astro
@@ -106,7 +106,7 @@ const {
 		@apply relative z-10;
 	}
 	.testimonial__blockquote {
-		@apply pb-6 font-headings text-xl leading-9 md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-600 dark:[&>p]:text-neutral-300;
+		@apply font-headingsPrimary pb-6 text-xl leading-9 md:text-3xl md:leading-[3.75rem] [&>p]:text-neutral-600 dark:[&>p]:text-neutral-300;
 	}
 	.testimonial__figcaption {
 		@apply flex flex-col gap-4 text-sm leading-normal text-neutral-600 dark:text-neutral-300;
