--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,8 +20,11 @@ import GoogleTagManager from '../components/scripts/googleTagManagerBody.astro'
 // Styles
 import '../styles/global.css'
 // Fonts
-import '@fontsource-variable/ibm-plex-sans'
-import '@fontsource/ibm-plex-mono'
+import '@fontsource-variable/nunito-sans'
+import '@fontsource-variable/playfair-display'
+import '@fontsource-variable/roboto-mono'
+import '@fontsource/ubuntu'
+
 // Data
 import { configData } from '../config/config'
 
