--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -696,7 +696,7 @@ button.swiper-pagination-bullet {
 
 /* Custom Pagination */
 .custom-pagination-bullet.swiper-pagination-bullet {
-	@apply relative !h-4 !bg-transparent font-headings text-sm text-neutral-600;
+	@apply font-headingsPrimary relative !h-4 !bg-transparent text-sm text-neutral-600;
 }
 
 .custom-pagination-bullet.swiper-pagination-bullet-active {
