--- a/src/pages/index-2.astro
+++ b/src/pages/index-2.astro
@@ -79,7 +79,7 @@ const feedbackData = {
 }
 ---
 
-<Layout title={SEO.title} description={SEO.description}>
+<Layout title={SEO.title} description={SEO.description} classes="secondary-page">
 	<HomeCTA />
 	<TitleText title={aboutMeData.title} id={aboutMeData.id}>
 		<p slot="firstColumn">
