--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@ html {
 }
 body {
 	--gradient-stop: 15%;
-	@apply font-bodyPrimary dark:font-bodySecondary text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:text-neutral-400;
+	@apply font-bodyPrimary text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:text-neutral-400;
 	background:
 		radial-gradient(
 			circle at 90% 0%,
@@ -44,7 +44,7 @@ h3,
 h4,
 h5,
 h6 {
-	@apply font-headingsPrimary dark:font-headingsSecondary text-neutral-900 last:mb-0 dark:text-neutral-50 [&>strong]:text-primary-500;
+	@apply font-headingsPrimary text-neutral-900 last:mb-0 dark:text-neutral-50 [&>strong]:text-primary-500;
 }
 h1 strong,
 h2 strong,
@@ -110,4 +110,17 @@ main a {
 /* To disable scroll animations remove the class "scroll-animation" from root html in the layout file */
 .scroll-animation .col {
 	@apply translate-y-4 transform opacity-0 transition-all duration-1000 [&.scroll-animated]:translate-y-0 [&.scroll-animated]:opacity-100 [&:nth-child(1)]:delay-[50ms] [&:nth-child(10)]:delay-[725ms] [&:nth-child(11)]:delay-[800ms] [&:nth-child(12)]:delay-[875ms] [&:nth-child(2)]:delay-[125ms] [&:nth-child(3)]:delay-[200ms] [&:nth-child(4)]:delay-[275ms] [&:nth-child(5)]:delay-[350ms] [&:nth-child(6)]:delay-[425ms] [&:nth-child(7)]:delay-[500ms] [&:nth-child(8)]:delay-[575ms] [&:nth-child(9)]:delay-[650ms];
+}
+
+/* Fonts */
+.secondary-page body * {
+	@apply !font-bodySecondary;
+}
+.secondary-page h1,
+.secondary-page h2,
+.secondary-page h3,
+.secondary-page h4,
+.secondary-page h5,
+.secondary-page h6 {
+	@apply !font-headingsSecondary;
 }
