Updated font size

--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -47,7 +47,7 @@ const contactData = {
 	</p>
 	<div slot="secondColumn">
 		<div
-			class="text-basic flex flex-col gap-4 text-neutral-600 dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
+			class="flex flex-col gap-4 text-lg leading-8 text-neutral-600 dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
 		>
 			{
 				contactData.secondColumn.map((item) =>
