--- a/src/components/blocks/titleText/TitleText.astro
+++ b/src/components/blocks/titleText/TitleText.astro
@@ -18,12 +18,12 @@ const { title, id, classes } = Astro.props
 <Section id && id={id} classes={classes}>
 	<Row>
 		<Col span="2">
-			<h2 class="text-2xl">{title}</h2>
+			<h2 class="text-3xl leading-8">{title}</h2>
 		</Col>
-		<Col span="5">
+		<Col span="5" classes="text-lg leading-8">
 			<slot name="firstColumn" />
 		</Col>
-		<Col span="5">
+		<Col span="5" classes="text-lg leading-8">
 			<slot name="secondColumn" />
 		</Col>
 	</Row>
