--- a/src/components/blocks/feed/Experience.astro
+++ b/src/components/blocks/feed/Experience.astro
@@ -26,7 +26,7 @@ const { data, classes } = Astro.props
 <Section id="experience">
 	<Row>
 		<Col span="2">
-			<h2 class="text-2xl">Experience</h2>
+			<h2 class="text-3xl leading-8">Experience</h2>
 		</Col>
 		<Col span="10">
 			<Feed data={data} classes={classes} />
