--- a/src/components/blocks/hero/HomeCTA.astro
+++ b/src/components/blocks/hero/HomeCTA.astro
@@ -27,13 +27,13 @@ import { Image } from 'astro:assets'
 			/>
 			<div class="relative z-10 text-left">
 				<h1
-					class="w-initial text-left text-4xl leading-[60px] opacity-80 md:text-8xl md:leading-[120px]"
+					class="w-initial text-left text-4xl leading-[60px] opacity-80 md:text-9xl md:leading-[128px]"
 				>
 					I’m Milo <br /> I build <br /> for the web.
 				</h1>
 
 				<div
-					class="font-headingsPrimary flex flex-row flex-wrap gap-6 text-neutral-600 lg:flex-nowrap dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
+					class="flex flex-row flex-wrap gap-6 font-headingsPrimary text-base text-neutral-600 lg:flex-nowrap dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
 				>
 					<a href="mailto:milo@studio.com">milo@studio.com</a>
 					<a href="tel:+13235550198">+1 (323) 555-0198</a>
