--- a/src/components/blocks/hero/HomeVideoCTA.astro
+++ b/src/components/blocks/hero/HomeVideoCTA.astro
@@ -37,7 +37,7 @@ const { video = '/videos/hero-video-primary.mp4' } = Astro.props
 				</h1>
 
 				<div
-					class="font-headingsPrimary flex flex-row flex-wrap gap-6 text-neutral-600 lg:flex-nowrap dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
+					class="flex flex-row flex-wrap gap-6 font-headingsPrimary text-base text-neutral-600 lg:flex-nowrap dark:text-neutral-300 [&_a]:text-neutral-600 [&_a]:transition-colors [&_a]:duration-300 dark:[&_a]:text-neutral-300"
 				>
 					<a href="mailto:milo@studio.com">milo@studio.com</a>
 					<a href="tel:+13235550198">+1 (323) 555-0198</a>
