--- a/src/components/blocks/testimonials/Feedback.astro
+++ b/src/components/blocks/testimonials/Feedback.astro
@@ -22,7 +22,7 @@ const { data, title, id, classes } = Astro.props
 <Section id && id={id} classes={classes}>
 	<Row>
 		<Col span="2">
-			<h2 class="text-2xl">{title}</h2>
+			<h2 class="text-3xl leading-8">{title}</h2>
 		</Col>
 		<Col span="10">
 			<Slider
