--- a/src/pages/case-studies/[...page].astro
+++ b/src/pages/case-studies/[...page].astro
@@ -44,7 +44,7 @@ const header = {
 			<Col span="12" classes="max-w-3xl self-center justify-self-center ">
 				<div class="relative text-left">
 					<h1 class="text-center text-5xl opacity-80">Case Studies</h1>
-					<p class="text-center text-lg opacity-80">
+					<p class="text-center text-lg leading-8 opacity-80">
 						Over the years, I have had the privilege of working on a wide range of projects, from
 						designing and developing websites for small businesses to creating complex web
 						applications for large enterprises.
